# data-engineering-handbook-for-llm

./: .gitignore  404.html  README.md  README_en.md  README_ja.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  release-pdf.yml
docs/chapter2/: 2_1_data_acquisition.md  2_2_cleaning_denoising.md  2_3_tokenization_serialization.md
docs/chapter3/: 3_1.md  3_2.md  3_3.md
docs/chapter4/: 4_1.md  4_2.md  4_3.md
docs/en/: index.md
docs/en/part2/: 2_3_tokenization_serialization.md
docs/en/part5/: 5_1_rag_pipeline.md
docs/ja/: index.md
docs/ja/part5/: 5_1_rag_pipeline.md  5_2_mm_rag.md
docs/zh/: index.md
docs/zh/part1/: 1_1_data_change.md  1_2_data_infra.md
docs/zh/part2/: 2_1_data_acquisition.md  (+2 more)
en/: index.html
ja/: index.html
part1/1_1_data_change/: index.html
part1/1_2_data_infra/: index.html
part2/2_1_data_acquisition/: index.html
part2/2_2_cleaning_denoising/: index.html
part2/2_3_tokenization_serialization/: index.html
part3/3_1_image_text_pairs/: index.html
part3/3_2_recaptioning/: index.html
part3/3_3_video_audio/: index.html
part4/4_1_sft_data/: index.html
part4/4_2_synthetic_data/: index.html
part4/4_3_preference_data/: index.html
part5/5_1_rag_pipeline/: index.html
part5/5_2_mm_rag/: index.html
part6/6_1_mini_c4/: index.html
part6/6_2_legal_sft/: index.html
part6/6_3_llava_instruct/: index.html
part6/6_4_synthetic_textbook/: index.html
part6/6_5_mm_rag/: index.html
scripts/: generate_pdf_config.py
search/: search_index.json
stylesheets/: extra.css  pdf_extra.css
(+79 files in other folders)
